fix: Final critical hotkey fixes (round 4)
Fixed 7 critical and high-priority issues:

**Critical Fixes:**
1. Thread-unsafe collections: Use Collections.synchronizedSet/Map for
   registeredWindows, macHotKeyRefs, and linuxKeycodes to prevent race
   conditions during concurrent access
2. macOS CFString memory leak: Remove premature nulling in stop() to
   prevent race where CFString leaks if cleanupMacOS() runs after
   macRunLoopMode is set to null
3. Reflection error messages: Add specific catch for InaccessibleObjectException
   with clear guidance about required --add-opens JVM flag

**High Priority Fixes:**
4. Linux partial registration: Mark as FAILED if <50% hotkeys register,
   provide detailed feedback about partial registrations (e.g., 4/9)
5. Consistent status updates: Verified all event loop error handlers update
   _registrationStatus.value (already complete from previous round)
6. Null checks on API instances: Verified smart casting after null checks
   provides adequate safety

**Medium Priority Fixes:**
7. Settings loading duplication: Extract loadSettings() helper with
   configurable null/default return behavior

Generated with [Claude Code](https://claude.com/claude-code)